--- a/ui-config.yml
+++ b/ui-config.yml
@@ -1,6 +1,36 @@
 ---
 
-type: showroom
+antora:
+  name: modules
+  dir: www
+  modules:
+    - name: module-01
+      label: "Workshop overview and tips"
+      solveButton: false
+    - name: module-02-collection
+      label: "Creating a collection with the Ansible extension for VS Code"
+      solveButton: false
+    - name: module-03-ade
+      label: "Using Ansible developement environment"
+      solveButton: false
+    - name: module-04-module
+      label: "Adding a module to our collection"
+      solveButton: false
+    - name: module-05-molecule
+      label: "Testing our collection with Molecule"
+      solveButton: false
+    - name: module-06-pytest
+      label: "Functional testing with pytest-ansible"
+    - name: module-08-builder
+      label: "Creating an Execution Environment with ansible-builder"
+      solveButton: false
+    - name: module-09-sign
+      label: "Introducing supply chain security with ansible-sign"
+      solveButton: false
+    - name: module-10
+      label: "What's next ?"
+      solveButton: false
+
 tabs:
   - name: VS Ccode
     url: https://vscode-${guid}.${domain}
